--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <header class="max-w-6xl mx-auto px-8 py-20">
         <h1 class="text-6xl md:text-8xl font-extrabold tracking-tighter mb-8 leading-none">
-            Let's be <br><span class="text-gray-400">Professional</span>
+            Let's get <br><span class="text-gray-400">Professional</span>
         </h1>
         <p class="text-xl text-gray-500 max-w-2xl leading-relaxed">
             I specialize in high-quality project delivery and digital solutions. Exploring the intersection of design, technology, and business efficiency.
