Revise AeroTask project description in index.html
Updated project description for AeroTask to provide a clearer overview of its features and purpose.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <img src="project_1.png" alt="Project 1" class="w-full h-full object-cover">
                 </div>
                 <h3 class="text-2xl font-bold">AeroTask</h3>
-                <p class="text-gray-500">"Built for students who demand more. AeroTask bridges the gap between academic discipline and physical peak performance. Track your study deep-work, visualize your gym gains, and master your daily routine with zero friction."</p>
+                <p class="text-gray-500">"AeroTask is a high-performance discipline tracker designed for the modern operator. Built on a professional spreadsheet architecture, it allows you to visualize 31-day habits with precision. Featuring a real-time efficiency engine and a minimalist "OLED" aesthetic, AeroTask turns your daily consistency into data-driven progress."</p>
             </div>
 
             
@@ -57,4 +57,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
